@@ -1,0 +1,20 @@
+apiVersion: 1
+
+datasources:
+  - name: tempo
+    type: tempo
+    url: http://tempo:3200
+    isDefault: true
+    editable: true
+  - name: prometheus
+    type: prometheus
+    url: http://prometheus:9090
+    isDefault: false
+    editable: true
+    jsonData:
+      prometheusType: "Prometheus"
+      prometheusVersion: "2.45.0"
+      exemplarTraceIdDestinations:
+        - name: "trace_id"
+          datasourceUid: "tempo"
+          urlDisplayLabel: "Tempo"
