@@ -1,0 +1,23 @@
+compactor:
+  compaction:
+    block_retention: 1h
+
+ingester:
+  max_block_duration: 5m
+
+server:
+  http_listen_port: 3200
+  log_level: info
+
+stream_over_http_enabled: true
+
+storage:
+  trace:
+    backend: local
+    wal:
+      path: /var/tempo/wal
+    local:
+      path: /var/tempo/blocks
+
+usage_report:
+  reporting_enabled: false
